# simil

./: .gitignore  README.md  pyproject.toml  registry.json
scripts/: build_deezer_index.py  build_fma_index.py  build_jamendo_index.py  build_mtgjamendo_index.py  build_spotify_index.py
simil/: __init__.py  audio.py  catalog.py  config.py  registry.py
simil/api/: __init__.py  app.py
simil/cli/: __init__.py  main.py
simil/core/: __init__.py  exceptions.py  models.py  protocols.py
simil/embedders/: __init__.py  base.py  clap.py  effnet.py  mfcc.py
simil/index/: __init__.py  numpy_index.py
simil/resolvers/: __init__.py  base.py  local.py  spotify.py  ytdlp.py
simil/search/: __init__.py  engine.py
simil/static/: index.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_indexer_pipeline.py
tests/unit/: __init__.py  test_api.py  test_audio.py  test_catalog.py  test_cli.py  test_effnet_embedder.py  test_mfcc_embedder.py  test_models.py  test_numpy_index.py  test_registry.py  test_resolvers.py  test_scanner.py  test_search_engine.py
